syntax = "proto3";

package minimatch;

import "proto/messages.proto";
import "google/protobuf/empty.proto";

message CreateTicketRequest {
  Ticket ticket = 1;
}

message DeleteTicketRequest {
  string ticket_id = 1;
}

message GetTicketRequest {
  string ticket_id = 1;
}

message WatchAssignmentsRequest {
  string ticket_id = 1;
}

message WatchAssignmentsResponse {
  Assignment assignment = 1;
}

message AcknowledgeBackfillRequest {
  string backfill_id = 1;
  Assignment assignment = 2;
}

message AcknowledgeBackfillResponse {
  Backfill backfill = 1;
  repeated Ticket tickets = 2;
}

message CreateBackfillRequest {
  Backfill backfill = 1;
}

message DeleteBackfillRequest {
  string backfill_id = 1;
}

message GetBackfillRequest {
  string backfill_id = 1;
}

message UpdateBackfillRequest {
  Backfill backfill = 1;
}

service FrontendService {
  rpc CreateTicket(CreateTicketRequest) returns (Ticket);
  rpc DeleteTicket(DeleteTicketRequest) returns (google.protobuf.Empty);
  rpc GetTicket(GetTicketRequest) returns (Ticket);
  rpc WatchAssignments(WatchAssignmentsRequest) returns (stream WatchAssignmentsResponse);
  rpc AcknowledgeBackfill(AcknowledgeBackfillRequest) returns (AcknowledgeBackfillResponse);
  rpc CreateBackfill(CreateBackfillRequest) returns (Backfill);
  rpc DeleteBackfill(DeleteBackfillRequest) returns (google.protobuf.Empty);
  rpc GetBackfill(GetBackfillRequest) returns (Backfill);
  rpc UpdateBackfill(UpdateBackfillRequest) returns (Backfill);
}
